# customer_forecast_pipeline

./: .env.sample  LICENSE  README.md  config.py  forecast.py  ingest.py  main.py  optimise.py  pyproject.toml  transform.py
data/: forecasts.csv  monte_carlo_results.csv  prescriptions.csv  raw_data.csv  transformed_data.csv
